# enigma

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
enigma/: Cargo.toml
enigma-api/: Cargo.toml
enigma-api/src/: axum_feature.rs  lib.rs
enigma-cli/: Cargo.toml
enigma-cli/src/: main.rs
enigma-serve/: Cargo.toml
enigma-serve/src/: error.rs  main.rs
enigma/src/: error.rs  lib.rs  password.rs  session.rs  tests.rs  user.rs
schema/: 001.sql  schema.sql
