[package]
name = "enigma-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.6.20", features = [], optional = true }
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }

[features]
axum = ["dep:axum"]



