[package]
name = "enigma-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
dotenvy = "0.15.7"
enigma = { path = "../enigma", features = [] }
serde = { version = "1.0.189", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4"] }

[dev-dependencies]

