[package]
name = "enigma-serve"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["http2", "tracing"] }
axum-macros = "0.3.8"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
enigma = { path = "../enigma", features = [] }
enigma-api = { path = "../enigma-api", features = ["axum"] }
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]

