[package]
name = "enigma"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
enigma-api = { path = "../enigma-api", features = ["axum"] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rusqlite = { version = "0.29.0", features = [
    "bundled",
    "trace",
    "uuid",
    "chrono",
] }
serde = { version = "1.0.189", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.49"
tracing = "0.1.40"
uuid = { version = "1.5.0", features = ["v4"] }

[dev-dependencies]
tracing-test = "0.2.4"

