[package]
name = "enigma"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
rusqlite = { version = "0.30.0", features = [
    "bundled",
    "trace",
    "uuid",
    "chrono",
] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
serde = { version = "1.0.189", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.49"
tracing = "0.1.40"
uuid = { version = "1.5.0", features = ["v4"] }
kodama-api = { path = "../../kodama/kodama-api" }
rand_core = { version = "0.6.4", features = ["getrandom"] }

[dev-dependencies]
tracing-test = "0.2.4"

